# manakan

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  THIRD_PARTY_NOTICES.md  compile_flags.txt
.github/workflows/: ci.yml
completions/: manakan.bash
config/: config.toml  config.toml.example  manakan.toml.example
config/providers/: chatwork.toml.example  discord.toml.example  httpbingo.toml
config/targets/: chatwork.toml.example  discord.toml.example  httpbingo.toml
include/: app.hpp  arguments.hpp  cli.hpp  config_loader.hpp  config_parser.hpp  diagnostics.hpp  helpers.hpp  merge.hpp  models.hpp  request_builder.hpp  request_resolver.hpp  transport.hpp
src/: arguments.cpp  config_parser.cpp  helpers.cpp  main.cpp
src/app/: bootstrap.cpp  run_command.cpp
src/cli/: arguments.cpp  cli.cpp
src/config/: config_loader.cpp
src/core/: config_parser.cpp
src/diagnostics/: config_check.cpp
src/merge/: merge_tree.cpp
src/request/: build_request.cpp
src/resolve/: request_resolver.cpp
src/transport/: http_client.cpp
src/utils/: helpers.cpp
tests/: config_resolver_tests.cpp
